--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,17 +1,56 @@
 /* font-family: 'Playfair Display', serif;
 font-family: 'Poppins', sans-serif; */
 
-body {
-    
+:root {
+    --branding-color: #6c63ff;
+    --secondary-color: #f9f7fe;
+    --heading-font-family: 'Playfair Display', serif;
+    --default-font-family: 'Poppins', sans-serif;
 }
 
-h1 {
+body {
+    font-family: var(--default-font-family);
+}
+
+h1, h2, h3, h4, h5, h6 {
     color: black;
-    font-family: 'Playfair Display', serif;
+    font-family: var(--heading-font-family);
     font-weight: bold;
 }
 
+h1 {
+    font-size: 96px;
+}
+
 p {
-    font-family: 'Poppins', sans-serif;
     font-weight: normal; 
+}
+
+.hero {
+    background-color: var(--secondary-color);
+    text-align: center;
+    padding: 160Px 20px;
+}
+
+.hero p{
+    font-size: 36px;
+    font-weight: bold;
+    margin: 0;
+}
+
+.hero h2 {
+    font-family: var(--default-font-family);
+    color: #272142;
+    font-weight: lighter;
+    line-height: 2;
+    font-size: 23px;
+}
+
+.btn-branding {
+    background-color: var(--branding-color);
+    border-radius: 4px;
+    color: white;
+    font-size: 18px;
+    line-height: 27px;
+    padding: 15px 30px;
 }
