--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,16 +20,23 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
     font-size: 96px;
+    line-height: 1.5;
+}
+
+h2 {
+    font-size: 64px;
 }
 
 p {
     font-weight: normal; 
+    font-size: 16px;
+    line-height: 30px;
 }
 
 .hero {
     background-color: var(--secondary-color);
     text-align: center;
-    padding: 160Px 20px;
+    padding: 160px 20px;
 }
 
 .hero p{
@@ -42,7 +49,7 @@ p {
     font-family: var(--default-font-family);
     color: #272142;
     font-weight: lighter;
-    line-height: 2;
+    line-height: 1;
     font-size: 23px;
 }
 
@@ -53,4 +60,36 @@ p {
     font-size: 18px;
     line-height: 27px;
     padding: 15px 30px;
+}
+
+.btn-branding-outline {
+    border: 1px solid var(--branding-color);
+    border-radius: 4px;
+    color: var(--branding-color);
+    font-size: 18px;
+    line-height: 27px;
+    padding: 15px 30px;
+}
+
+.padding-description {
+    padding: 120px 60px;
+}
+
+@media (max-width: 960px) {
+    h1 {
+    font-size: 45px;
+    }
+
+    h2 {
+        font-size: 45px;
+    }
+
+    .hero {
+        padding: 80px 20px;
+    }
+
+    .project-description {
+        padding: 0;
+        text-align: center;
+    }
 }
