--- a/styles/styles.css
+++ b/styles/styles.css
@@ -53,22 +53,32 @@ p {
     font-size: 23px;
 }
 
-.about-header h1 {
+.content h1 {
     font-size: 64px;
     line-height: 80px;
 }
 
-.about-header h2 {
+.content h2 {
     font-size: 18px;
     font-family: var(--default-font-family);
     line-height: 80px;
 }
 
-.about-header {
+.content h3 {
+    font-size: 24px;
+    font-family: var(--default-font-family);
+    line-height: 1.5;
+}
+
+.content {
+    font-size: 14px;
+}
+
+.content-container {
     padding: 160px 20px;
 }
 
-.about-header-content {
+.content {
     margin: 30px;
 }
 
@@ -112,7 +122,7 @@ p {
         text-align: center;
     }
 
-    .about-header {
+    .content {
         padding: 0;
         text-align: center;
     }
