Header navigation added in index.html

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -104,6 +104,37 @@ p {
     padding: 120px 60px;
 }
 
+.logo {
+    max-height: 40px;
+}
+
+nav {
+    padding: 20px 0;
+}
+
+nav ul {
+    margin: 0;
+    padding: 0;
+}
+
+nav li {
+    display: inline;
+    list-style: none;
+    line-height: 45px;
+    margin-left: 15px;
+}
+
+nav a {
+    text-decoration: none;
+    color: #272142;opacity: 0.7;
+    transition: all 100ms ease-in-out;
+}
+
+nav a:hover,
+nav li.active a  {
+    color: var(--branding-color);
+}
+
 @media (max-width: 960px) {
     h1 {
     font-size: 45px;
@@ -125,5 +156,13 @@ p {
     .content {
         padding: 0;
         text-align: center;
+    }
+
+    nav {
+        padding: 10px 0;
+    }
+
+    nav a {
+        font-size: 14px;
     }
 }
