--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,9 +2,10 @@
 font-family: 'Poppins', sans-serif; */
 
 :root {
-    --branding-color: #6c63ff;
-    --secondary-color: #f9f7fe;
-    --heading-font-family: 'Playfair Display', serif;
+    --branding-color: #FFC107;
+    --primary-color: #474747;
+    --secondary-color: #BDBDBD;
+    --heading-font-family: 'Bebas Neue', cursive;
     --default-font-family: 'Poppins', sans-serif;
 }
 
@@ -13,7 +14,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    color: black;
+    color: var(--primary-color);
     font-family: var(--heading-font-family);
     font-weight: bold;
 }
@@ -44,6 +45,7 @@ p {
 }
 
 .hero p{
+    color: var(--primary-color);
     font-size: 36px;
     font-weight: bold;
     margin: 0;
@@ -51,7 +53,7 @@ p {
 
 .hero h2 {
     font-family: var(--default-font-family);
-    color: #272142;
+    color: var(--primary-color);
     font-weight: lighter;
     line-height: 1;
     font-size: 23px;
@@ -104,8 +106,18 @@ p {
     padding: 15px 30px;
 }
 
+.btn-branding-outline:hover {
+    background-color: var(--branding-color);
+    color: white;
+}
+
 .padding-description {
     padding: 120px 60px;
+}
+
+.project-description-left {
+    padding: 0;
+    text-align: right;
 }
 
 .logo {
@@ -130,7 +142,7 @@ nav li {
 
 nav a {
     text-decoration: none;
-    color: #272142;opacity: 0.7;
+    color: var(--primary-color);opacity: 0.7;
     transition: all 100ms ease-in-out;
 }
 
@@ -144,7 +156,7 @@ footer {
 }
 
 footer .contact-box {
-    background: var(--secondary-color);
+    border: 1px solid var(--secondary-color);
     padding: 30px 120px;
     border-radius: 10px;
 }
@@ -155,7 +167,7 @@ footer .contact-box p {
 
 footer .email-link {
     text-decoration: none;
-    color: black;opacity: 0.7;
+    color: var(--primary-color);opacity: 0.7;
     font-size: 24px;
 }
 
@@ -166,7 +178,6 @@ footer .email-link:hover {
 footer .social-links a {
     margin: 0 20px;
     color: var(--branding-color);
-    background-color: var(--secondary-color);
     padding: 10px 15px;
     font-size: 18px;
     border-radius: 50%;
@@ -175,7 +186,7 @@ footer .social-links a {
 
 footer .social-links a:hover {
     background-color: var(--branding-color);
-    color: var(--secondary-color);
+    color: white;
 }
 
 @media (max-width: 960px) {
@@ -191,7 +202,7 @@ footer .social-links a:hover {
         padding: 80px 20px;
     }
 
-    .project-description {
+    .project-description, .project-description-left {
         padding: 0;
         text-align: center;
     }
